/*
protoc -I ./ds-project/common/proto/models models.proto --go_out=plugins=grpc:./
 */
syntax = "proto3";
package models;
import "google/protobuf/timestamp.proto";

option go_package = "ds-project/common/proto/models";

message Post {
  string post = 1;
  string username = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
}

message User {
  string full_name = 1;
  string password = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
}